Bug-73229-Accessibility: search icon fails colour contrast requirement - Issue Fix done

--- a/css/mobile-checker.css
+++ b/css/mobile-checker.css
@@ -1584,13 +1584,14 @@ ul.item-list.p-0 {
 
 .wc-box-border {
     border: 1px solid #000 !important;
-    color: #d3d3d3 !important;
+    color: #212529 !important;
     height: 58px;
 }
 
-    .wc-box-border:hover {
-        background-color: transparent !important;
-    }
+.wc-box-border:hover {
+    background-color: transparent !important;
+    color: #212529 !important;
+}
 
 .mt-35 {
     margin-top: 35%;
